[package]
name = "blink"
version = "0.1.0"
authors = ["Martin Hardselius <martin@hardselius.dev"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blink"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

# vim: ft=toml.jinja2
